# ColorMovie-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
algo/include/: kMeansCluster.h
algo/src/: kMeansCluster.cpp
cmake/: External-Catch.cmake  External-OpenCV.cmake  External-Spdlog.cmake
output/: .gitignore
src/: main.cpp
src/algo/include/: kMeansCluster.h
src/algo/src/: kMeansCluster.cpp
src/core/include/: frameAnalyzer.h
src/core/src/: frameAnalyzer.cpp
src/io/include/: frameExtractor.h
src/io/src/: frameExtractor.cpp
src/utils/include/: loggerUtils.h
src/utils/src/: loggerUtils.cpp
